# bevy-playground

./: .gitignore  Cargo.toml  notes
mobile/: Cargo.toml  Makefile
mobile/mobile.xcodeproj/: project.pbxproj
mobile/mobile.xcodeproj/xcshareddata/xcschemes/: bevy_mobile_example.xcscheme
mobile/src/: lib.rs
src/: brick.rs  bullet.rs  collision.rs  components.rs  constants.rs  entities.rs  lib.rs  main.rs  physics.rs  player.rs  systems.rs
src/sprites/: brick.rs  bullet.rs  mod.rs  player.rs
