[package]
name = "gameios"
# Version is required by `cargo-apk`, though this value will never change.
version = "0.0.0"
edition = "2021"
description = "Mobile build"
publish = false
license = "MIT OR Apache-2.0"

[lib]
name = "iosbuild"
crate-type = ["staticlib", "cdylib"]

[dependencies]
bevy = "0.15.1"
game = { path= ".." }

[target.aarch64-apple-ios-sim.dependencies]
bevy = { version = "0.15.1", features = ["ios_simulator"] }
